--- a/src/main/resources/template/completed.html
+++ b/src/main/resources/template/completed.html
@@ -14,6 +14,9 @@
 
 <div class="full height image">
     <div class="ui main container">
+        <div>
+            <img src="/img/4-1.png" width="100%" height="80">
+        </div>
         <div class="ui information container">
             <div class="ui middle center aligned grid">
                 <div class="center column">
