--- a/src/main/resources/template/job.html
+++ b/src/main/resources/template/job.html
@@ -15,6 +15,9 @@
 <div class="full height image">
     <div class="ui main container">
         <div class="ui information container">
+            <div>
+                <img src="/img/3-1.png" width="100%" height="80">
+            </div>
             <div class="acceptance-icon" style="border:solid 3px #4B610B;" th:if="${insOrder.insuranceType.equals('treat')}">
                 <img src="/img/icon_treat.png">
             </div>
