--- a/src/main/resources/template/user.html
+++ b/src/main/resources/template/user.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+
     <title>ご本人情報の入力</title>
 
     <link rel="stylesheet" th:href="@{http://fonts.googleapis.com/css?family=Exo:900}"/>
@@ -15,6 +16,9 @@
 <div class="full height image">
     <div class="ui main container">
         <div class="ui information container">
+            <div>
+                <img src="/img/2-1.png" width="100%" height="80">
+            </div>
             <div class="acceptance-icon" style="border:solid 3px #4B610B;" th:if="${insOrder.insuranceType.equals('treat')}">
                 <img src="/img/icon_treat.png">
             </div>
@@ -187,8 +191,6 @@
                                 </td>
                                 <td>
                                     <p>例：1234567</p>
-                                    <!--<script src="https://ajaxzip3.github.io/ajaxzip3.js" charset="UTF-8"></script>-->
-                                    <script th:src="@{/js/ajaxzip3.js}"></script>
                                     <div class="field" th:classappend="${errors.hasError('zipCode')} ? 'error'">
                                         <input type="text" class="zipcode" name="zipCode" th:value="${form.zipCode}" onKeyUp="AjaxZip3.zip2addr(this,'','address','address');"/>
                                         <p th:if="${errors.hasError('zipCode')}"
